--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Info about me</p>
     <h2>Contact Info</h2>
     <ul>
-        <li><strong>email</strong> <a href="mailto:richhosek@gmail.com">richhosek@gmail.,com</a></li>
+        <li><strong>email</strong> <a href="mailto:richhosek@gmail.com">RichHosek@gmail.,com</a></li>
         <li><strong>GitHub</strong> <a href="https://github.com/RichHosek">RichHosek</a>       </li>
         <li><strong>Portfolio</strong>      <a href="#">coming soon</a></li>
     </ul>
