--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1>Student Bio</h1>
     <h2>Rich Hosek</h2>
     <img height="200px" src="https://upload.wikimedia.org/wikipedia/en/d/d8/Curious_George.png">
-    <p>Info about me</p>
+    <p>Info about me -- I'm very curious</p>
     <h2>Contact Info</h2>
     <ul>
         <li><strong>email</strong> <a href="mailto:richhosek@gmail.com">RichHosek@gmail.,com</a></li>
         <li><strong>GitHub</strong> <a href="https://github.com/RichHosek">RichHosek</a>       </li>
-        <li><strong>Portfolio</strong>      <a href="#">coming soon</a></li>
+        <li><strong>Portfolio</strong>      <a href="https://richhosek.github.io">My stuff</a></li>
     </ul>
 </body>
 </html>
